@@ -1,8 +1,7 @@
 Name:Daybreak Coronet
 ManaCost:W W
 Types:Enchantment Aura
-Text:Enchant creature with another Aura attached to it
-K:Enchant creature
+K:Enchant creature with another Aura attached to it
 A:SP$ Attach | Cost$ W W | ValidTgts$ Creature.enchanted | TgtPrompt$ Select target enchanted creature | AILogic$ Pump
 S:Mode$ Continuous | Affected$ Creature.EnchantedBy | AddPower$ 3 | AddToughness$ 3 | AddKeyword$ First Strike & Vigilance & Lifelink | Description$ Enchanted creature gets +3/+3 and has first strike, vigilance, and lifelink. (Damage dealt by the creature also causes its controller to gain that much life.)
 T:Mode$ Always | TriggerZones$ Battlefield | CheckSVar$ X | SVarCompare$ EQ1 | Execute$ TrigRemove | Static$ True
